--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
 services:
-  ui-demo:
+  borg-ui:
     image: node:18-alpine
     working_dir: /app
     volumes:
       - ./:/app
     ports:
-      - "52134:52134"
-    command: sh -c "yarn install && yarn build && yarn global add serve && serve -s dist -l 52134" 
+      - "5173:5173"
+    command: sh -c "yarn install && yarn dev --host 0.0.0.0 --port 5173" 
