Refactor project structure and update package metadata for @borg/ui
- Changed package name to @unimatrix-01/ui and updated version to 1.0.0.
- Enhanced README with detailed features, installation instructions, and usage examples for components.
- Updated Vite configuration for improved library build settings and added sourcemaps.
- Refactored toggle component to export ToggleProps interface for better type safety.
- Ensured all changes adhere to established theming and styling conventions.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "borg-ui",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@unimatrix-01/ui",
+  "version": "1.0.0",
+  "description": "A modern React UI component library with a holographic theme",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -31,5 +44,23 @@
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-svgr": "^4.3.0"
-  }
+  },
+  "keywords": [
+    "react",
+    "ui",
+    "components",
+    "holographic",
+    "tailwind",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/borg-ui.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/borg-ui/issues"
+  },
+  "homepage": "https://github.com/yourusername/borg-ui#readme"
 }
