Update .gitignore, App component styling, and introduce utility functions for icons
- Enhanced .gitignore to include paths for create-borg-ui dependencies and build outputs.
- Refactored App component to implement a gradient background for improved visual appeal.
- Updated index.css to refine theme colors and ensure consistency with the new design.
- Introduced utility functions for icon handling in icon-utils.ts to streamline icon imports.
- Created a centralized styleMap in style-map.ts for consistent theming across components.
- Ensured all changes adhere to established theming and styling conventions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Node dependencies
 /node_modules
+/create-borg-ui/node_modules
 
 # Built files
 /dist
+/create-borg-ui/dist
+
+# Template creation tool
+/create-borg-ui
 
 # Testing
 /coverage
