--- a/package.json
+++ b/package.json
@@ -38,11 +38,8 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.0",
     "@floating-ui/react-dom": "^0.26.0",
-    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
-    "react": "^19.1.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^19.1.0",
     "react-popper": "^2.3.0"
   },
   "devDependencies": {
@@ -60,8 +57,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
-    "vite-plugin-dts": "^3.7.3",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-dts": "^3.7.3"
   },
   "bin": {
     "borg-ui": "./scripts/setup.js"
