chore: Update package dependencies and improve component structure for routing and theming

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unimatrix-01/ui",
-  "version": "1.0.2",
+  "version": "1.0.12",
   "description": "A modern, holographic UI component library for React applications",
   "type": "module",
   "main": "./dist/index.js",
@@ -42,7 +42,10 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
     "react-day-picker": "^8.10.0",
+    "react-markdown": "^10.1.0",
     "react-popper": "^2.3.0",
+    "react-router-dom": "^7.6.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
