--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
+version: "3.9"
 services:
   borg-ui:
     image: node:18-alpine
     working_dir: /app
     volumes:
       - ./:/app
+    command: sh -c "yarn install && yarn build && yarn preview --host 0.0.0.0 --port 52134"
     ports:
       - "52134:52134"
-    command: sh -c "yarn install && yarn dev --host 0.0.0.0 --port 52134" 
+    environment:
+      - NODE_ENV=production
+
+  borg-ui-static:
+    image: caddy:2-alpine
+    depends_on:
+      - borg-ui
+    ports:
+      - "52134:80"
+    volumes:
+      - ./dist:/srv
+      - ./Caddyfile:/etc/caddy/Caddyfile
+    environment:
+      - CADDY_MAINTENANCE=false
+    # Caddy will serve the static files from /srv
