--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   ],
   "scripts": {
     "dev": "npm run prebuild && vite",
-    "build": "tsc && vite build",
-    "prebuild": "node scripts/generate-doc-versions.mjs",
+    "build": "npm run prebuild && tsc && vite build",
+    "prebuild": "node scripts/generate-doc-versions.mjs && node scripts/generate-nav.mjs",
     "preview": "vite preview",
     "lint": "eslint . --max-warnings 0",
     "backfill-tags": "node scripts/backfill-tags.mjs",
     "prepare": "npm run build",
     "postinstall": "husky install",
-    "release": "standard-version",
+    "release": "node scripts/release.mjs",
     "prepublishOnly": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "node ./scripts/setup.js"
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
+    "gray-matter": "^4.0.3",
     "react-day-picker": "^8.10.0",
     "react-markdown": "^10.1.0",
     "react-popper": "^2.3.0",
@@ -64,6 +65,8 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "conventional-changelog-core": "^9.0.0",
+    "conventional-recommended-bump": "^11.2.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -97,5 +100,15 @@
   "bugs": {
     "url": "https://github.com/yourusername/borg-ui/issues"
   },
-  "homepage": "https://github.com/yourusername/borg-ui#readme"
+  "homepage": "https://github.com/yourusername/borg-ui#readme",
+  "standard-version": {
+    "bumpFiles": [
+      {
+        "filename": "package.json"
+      },
+      {
+        "filename": "create-borg-ui/package.json"
+      }
+    ]
+  }
 }
