--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,26 @@
 version: "3.9"
 services:
   borg-ui:
-    image: node:18-alpine
-    working_dir: /app
-    volumes:
-      - ./:/app
-    command: sh -c "yarn install && yarn build && yarn preview --host 0.0.0.0 --port 52134"
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "52134:52134"
     environment:
       - NODE_ENV=production
-
-  borg-ui-static:
-    image: caddy:2-alpine
-    depends_on:
-      - borg-ui
-    ports:
-      - "52134:80"
-    volumes:
-      - ./dist:/srv
-      - ./Caddyfile:/etc/caddy/Caddyfile
-    environment:
-      - CADDY_MAINTENANCE=false
-    # Caddy will serve the static files from /srv
+      - PORT=52134
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:52134/health",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
+    restart: unless-stopped
