--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   borg-ui:
     build:
@@ -6,6 +5,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "52134:52134"
+    command: node server.js
     environment:
       - NODE_ENV=production
       - PORT=52134
