--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,8 @@
-version: "3.9"
 services:
   borg-ui:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: nginx:alpine
     ports:
-      - "52134:52134"
-    environment:
-      - NODE_ENV=production
-      - PORT=52134
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:52134/health",
-        ]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 20s
+      - "52134:80"
+    volumes:
+      - ./dist:/usr/share/nginx/html
     restart: unless-stopped
