--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint . --max-warnings 0",
     "backfill-tags": "node scripts/backfill-tags.mjs",
     "prepare": "npm run build",
-    "postinstall": "husky install",
+    "postinstall": "npx husky install",
     "release": "node scripts/release.mjs",
     "prepublishOnly": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1",
