--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "dev": "npm run prebuild && vite",
     "build": "npm run prebuild && vite build",
+    "build:docs": "npm run prebuild && vite build --config vite.config.docs.ts",
     "prebuild": "node scripts/generate-doc-versions.mjs && node scripts/generate-nav.mjs",
     "preview": "vite preview",
     "lint": "eslint . --max-warnings 0",
