chore: Remove Caddyfile and update Dockerfile to use Node.js for serving static files, enhancing build process and configuration clarity

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: borg-ui
 
-    # internal Caddy listens on 2015
+    # App server listens on 2015
     expose:
       - "2015"
 
