--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
     labels:
       caddy.reverse_proxy: "{{upstreams 2015}}"
-      caddy.0: ui.unimatrix-01.dev
+      caddy: ui.unimatrix-01.dev
       caddy.tls: "contact@unimatrix-01.dev"
       caddy.encode: gzip
       caddy.header.Cache-Control: "public, max-age=604800"
