--- a/src/data/nav-manifest.json
+++ b/src/data/nav-manifest.json
@@ -5,226 +5,193 @@
     "order": 0,
     "children": [
       {
-        "title": "Components",
-        "path": "components",
-        "order": 0,
-        "children": [
-          {
-            "title": "Components",
-            "path": "components",
-            "order": 0,
-            "children": [
-              {
-                "title": "Button",
-                "path": "components/actions/button",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Button",
-                    "path": "components/actions/button",
-                    "order": 0
-                  },
-                  {
-                    "title": "Theme Toggle",
-                    "path": "components/actions/theme-toggle",
-                    "order": 0
-                  },
-                  {
-                    "title": "Toggle Button",
-                    "path": "components/actions/toggle-button",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Warp Speed Background",
-                "path": "components/background/warp-speed-background",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Warp Speed Background",
-                    "path": "components/background/warp-speed-background",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Accordion",
-                "path": "components/data-display/accordion",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Accordion",
-                    "path": "components/data-display/accordion",
-                    "order": 0
-                  },
-                  {
-                    "title": "Badge",
-                    "path": "components/data-display/badge",
-                    "order": 0
-                  },
-                  {
-                    "title": "Chip",
-                    "path": "components/data-display/chip",
-                    "order": 0
-                  },
-                  {
-                    "title": "Table",
-                    "path": "components/data-display/table",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Checkbox",
-                "path": "components/forms/checkbox",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Checkbox",
-                    "path": "components/forms/checkbox",
-                    "order": 0
-                  },
-                  {
-                    "title": "Date Picker",
-                    "path": "components/forms/date-picker",
-                    "order": 0
-                  },
-                  {
-                    "title": "Dropdown",
-                    "path": "components/forms/dropdown",
-                    "order": 0
-                  },
-                  {
-                    "title": "Radio",
-                    "path": "components/forms/radio",
-                    "order": 0
-                  },
-                  {
-                    "title": "Text Area",
-                    "path": "components/forms/text-area",
-                    "order": 0
-                  },
-                  {
-                    "title": "Text Input",
-                    "path": "components/forms/text-input",
-                    "order": 0
-                  },
-                  {
-                    "title": "Time Picker",
-                    "path": "components/forms/time-picker",
-                    "order": 0
-                  },
-                  {
-                    "title": "Toggle",
-                    "path": "components/forms/toggle",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Card",
-                "path": "components/layout/card",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Card",
-                    "path": "components/layout/card",
-                    "order": 0
-                  },
-                  {
-                    "title": "Footer",
-                    "path": "components/layout/footer",
-                    "order": 0
-                  },
-                  {
-                    "title": "Grid",
-                    "path": "components/layout/grid",
-                    "order": 0
-                  },
-                  {
-                    "title": "Header",
-                    "path": "components/layout/header",
-                    "order": 0
-                  },
-                  {
-                    "title": "Hologram Container",
-                    "path": "components/layout/hologram-container",
-                    "order": 0
-                  },
-                  {
-                    "title": "Main Layout",
-                    "path": "components/layout/main-layout",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Breadcrumbs",
-                "path": "components/navigation/breadcrumbs",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Breadcrumbs",
-                    "path": "components/navigation/breadcrumbs",
-                    "order": 0
-                  },
-                  {
-                    "title": "Menu",
-                    "path": "components/navigation/menu",
-                    "order": 0
-                  }
-                ]
-              },
-              {
-                "title": "Modal",
-                "path": "components/overlay/modal",
-                "order": 0,
-                "children": [
-                  {
-                    "title": "Modal",
-                    "path": "components/overlay/modal",
-                    "order": 0
-                  },
-                  {
-                    "title": "Overlay",
-                    "path": "components/overlay/overlay",
-                    "order": 0
-                  },
-                  {
-                    "title": "Tooltip",
-                    "path": "components/overlay/tooltip",
-                    "order": 0
-                  }
-                ]
-              }
-            ]
-          }
-        ]
+        "title": "Quickstart",
+        "path": "quickstart",
+        "order": 1
       },
       {
         "title": "Getting Started",
         "path": "getting-started",
-        "order": 0,
+        "order": 2,
         "children": [
           {
-            "title": "Getting Started",
-            "path": "getting-started",
-            "order": 0,
-            "children": [
-              {
-                "title": "Setup",
-                "path": "getting-started/setup",
-                "order": 0
-              }
-            ]
+            "title": "Setup",
+            "path": "getting-started/setup",
+            "order": 0
           }
         ]
       },
       {
-        "title": "Quickstart",
-        "path": "quickstart",
-        "order": 0
+        "title": "Components",
+        "path": "components",
+        "order": 3,
+        "children": [
+          {
+            "title": "Actions",
+            "children": [
+              {
+                "title": "Button",
+                "path": "components/actions/button",
+                "order": 0
+              },
+              {
+                "title": "Theme Toggle",
+                "path": "components/actions/theme-toggle",
+                "order": 0
+              },
+              {
+                "title": "Toggle Button",
+                "path": "components/actions/toggle-button",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Data Display",
+            "children": [
+              {
+                "title": "Accordion",
+                "path": "components/data-display/accordion",
+                "order": 0
+              },
+              {
+                "title": "Badge",
+                "path": "components/data-display/badge",
+                "order": 0
+              },
+              {
+                "title": "Chip",
+                "path": "components/data-display/chip",
+                "order": 0
+              },
+              {
+                "title": "Table",
+                "path": "components/data-display/table",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Forms",
+            "children": [
+              {
+                "title": "Checkbox",
+                "path": "components/forms/checkbox",
+                "order": 0
+              },
+              {
+                "title": "Date Picker",
+                "path": "components/forms/date-picker",
+                "order": 0
+              },
+              {
+                "title": "Dropdown",
+                "path": "components/forms/dropdown",
+                "order": 0
+              },
+              {
+                "title": "Radio",
+                "path": "components/forms/radio",
+                "order": 0
+              },
+              {
+                "title": "Text Area",
+                "path": "components/forms/text-area",
+                "order": 0
+              },
+              {
+                "title": "Text Input",
+                "path": "components/forms/text-input",
+                "order": 0
+              },
+              {
+                "title": "Time Picker",
+                "path": "components/forms/time-picker",
+                "order": 0
+              },
+              {
+                "title": "Toggle",
+                "path": "components/forms/toggle",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Layout",
+            "children": [
+              {
+                "title": "Card",
+                "path": "components/layout/card",
+                "order": 0
+              },
+              {
+                "title": "Footer",
+                "path": "components/layout/footer",
+                "order": 0
+              },
+              {
+                "title": "Grid",
+                "path": "components/layout/grid",
+                "order": 0
+              },
+              {
+                "title": "Header",
+                "path": "components/layout/header",
+                "order": 0
+              },
+              {
+                "title": "Hologram Container",
+                "path": "components/layout/hologram-container",
+                "order": 0
+              },
+              {
+                "title": "Main Layout",
+                "path": "components/layout/main-layout",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Navigation",
+            "children": [
+              {
+                "title": "Breadcrumbs",
+                "path": "components/navigation/breadcrumbs",
+                "order": 0
+              },
+              {
+                "title": "Menu",
+                "path": "components/navigation/menu",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Overlay",
+            "children": [
+              {
+                "title": "Modal",
+                "path": "components/overlay/modal",
+                "order": 0
+              },
+              {
+                "title": "Overlay",
+                "path": "components/overlay/overlay",
+                "order": 0
+              },
+              {
+                "title": "Tooltip",
+                "path": "components/overlay/tooltip",
+                "order": 0
+              }
+            ]
+          },
+          {
+            "title": "Warp Speed Background",
+            "path": "components/background/warp-speed-background",
+            "order": 0
+          }
+        ]
       }
     ]
   }
